# zero2prod2022

./: .env  Cargo.toml  docker-compose.yml
scripts/: .env  init_db.sh
src/: configuration.rs  main.rs  startup.rs
tests/: health_check.rs
